# dataframe-statistical-analyzer

./: README.md  dataframe_statistical_analyzer.py  pyproject.toml  setup.py  test.py
src/: correlation_analysis.py  dips.py  increases.py  moving_average.py  outliers_iqr.py  pct_change.py  summary_statistics.py  trend_analysis.py
tests/: test.py
