[tool.poetry]
name = "dataframe-statistical-analyzer"
version = "0.1.0"
description = ""
authors = ["Durgesh Rathod"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
